login-app/k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 5000
  selector:
    app: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: login-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
